--- a/_factory_footers.html
+++ b/_factory_footers.html
@@ -36,17 +36,13 @@ UK</p>
                         <h2>Latest News</h2>
                         <div class="pt-3">
                             <ul> 
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>                                 
                             </ul>
                         </div>                         
@@ -55,27 +51,20 @@ UK</p>
                         <h2>Useful Links</h2>
                         <div class="pt-3">
                             <ul> 
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>                                 
                             </ul>
                         </div>                         
                     </div>
                     <div class="col-lg-3 col-md-6 pb-4 pb-lg-0 pe-3 ps-3 text-center text-lg-start">
                         <h2>Social</h2>
-                        <div class="pt-3">
-                            <a name="anchor" class="me-2 pd-footer-1-social-icon" href="#"><img src="images/design-assets/icon-facebook.svg" alt="icon of facebook" width="32" height="32"/></a>
-                            <a name="anchor" class="me-2 pd-footer-1-social-icon" href="#"><img alt="icon of twitter" width="32" height="32" src="images/design-assets/icon-twitter-white-01.svg"/></a>
-                            <a name="anchor" class="me-2 pd-footer-1-social-icon" href="#"><img alt="icon of linkedin" width="32" height="32" src="images/design-assets/icon-linkedin.svg"/></a>
+                        <div class="pt-3"><a name="anchor" class="me-2 pd-footer-1-social-icon" href="#"><img src="images/design-assets/icon-facebook.svg" alt="icon of facebook" width="32" height="32"/></a><a name="anchor" class="me-2 pd-footer-1-social-icon" href="#"><img alt="icon of twitter" width="32" height="32" src="images/design-assets/icon-twitter-white-01.svg"/></a><a name="anchor" class="me-2 pd-footer-1-social-icon" href="#"><img alt="icon of linkedin" width="32" height="32" src="images/design-assets/icon-linkedin.svg"/></a>
                         </div>                         
                     </div>
                 </div>
@@ -113,17 +102,13 @@ UK</p>
                         <h2>Latest News</h2>
                         <div class="pt-3">
                             <ul> 
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>                                 
                             </ul>
                         </div>                         
@@ -132,27 +117,20 @@ UK</p>
                         <h2>Useful Links</h2>
                         <div class="pt-3">
                             <ul> 
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>                                 
                             </ul>
                         </div>                         
                     </div>
                     <div class="col-lg-3 col-md-6 pb-4 pb-lg-0 pe-3 ps-3 text-center text-lg-start">
                         <h2>Social</h2>
-                        <div class="pt-3">
-                            <a name="anchor" class="me-2 pd-footer-2-social-icon" href="#"><img alt="icon of facebook" width="32" height="32" src="images/design-assets/icon-facebook-share.svg"/></a>
-                            <a name="anchor" class="me-2 pd-footer-2-social-icon" href="#"><img alt="icon of twitter" width="32" height="32" src="images/design-assets/icon-twitter-share.svg"/></a>
-                            <a name="anchor" class="me-2 pd-footer-2-social-icon" href="#"><img alt="icon of linkedin" width="32" height="32" src="images/design-assets/icon-linkedin-share.svg"/></a>
+                        <div class="pt-3"><a name="anchor" class="me-2 pd-footer-2-social-icon" href="#"><img alt="icon of facebook" width="32" height="32" src="images/design-assets/icon-facebook-share.svg"/></a><a name="anchor" class="me-2 pd-footer-2-social-icon" href="#"><img alt="icon of twitter" width="32" height="32" src="images/design-assets/icon-twitter-share.svg"/></a><a name="anchor" class="me-2 pd-footer-2-social-icon" href="#"><img alt="icon of linkedin" width="32" height="32" src="images/design-assets/icon-linkedin-share.svg"/></a>
                         </div>                         
                     </div>
                 </div>
@@ -174,6 +152,103 @@ UK</p>
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-footer-3</p>
             </div>
         </section>
+        <footer class="pb-5 pd-footer-3 pt-5 text-white">
+            <div class="container">
+                <div class="pb-4 row">
+                    <div class="col-12 text-center text-md-start">
+                        <a href="#" name="anchor" class="d-inline-block"><img alt="fort logo logo white" loading="lazy" class="" src="images/design-assets/fort-logo-white.svg" width="160" height="62"/></a> 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 text-center text-lg-start">
+                        <h3>Our Offices</h3>
+                        <address class="pb-4"> <h4>London</h4> <p>Address Line 1</p> <p>Address Line 2</p> <p>Town, Region</p> <p>United Kingdom</p> </address>
+                        <address class="pb-4"> <h4>Sydney</h4> <p>Address Line 1</p> <p>Address Line 2</p> <p>Town, Region</p> <p>United Kingdom</p> </address>
+                        <address class="pb-4"> <h4>Drop Us a Line</h4><a href="#" name="anchor" class="pd-icon-card-link"><img src="images/design-assets/icon-email-jewell.svg" alt="email icon" width="20" height="20" loading="lazy" class=""><span>hello@fortmarketing.co.uk</span></a> </address> 
+                    </div>
+                    <div class="col-lg-4 text-center text-lg-start">
+                        <h3>Services</h3>
+                        <div class="align-items-center align-items-lg-start d-flex flex-column justify-content-start pb-4"><a href="#" name="anchor" class="pd-footer-link">Direct Marketing</a>
+                            <a href="#" name="anchor" class="pd-footer-link">Search Engine Optimisation</a>
+                            <a href="#" name="anchor" class="pd-footer-link">Graphic Design</a>
+                            <a href="#" name="anchor" class="pd-footer-link">Custom Coding</a>
+                            <a href="#" name="anchor" class="pd-footer-link">WordPress Websites</a>
+                            <a href="#" name="anchor" class="pd-footer-link">Jekyll Static Site Generators</a>
+                            <a href="#" name="anchor" class="pd-footer-link">11ty Static Site Generators</a>
+                        </div>                         
+                    </div>
+                    <div class="col-lg-4 text-center text-lg-start">
+                        <h3>Industries</h3>
+                        <div class="align-items-center align-items-lg-start d-flex flex-column justify-content-start pb-4"><a href="#" name="anchor" class="pd-footer-link">Education</a>
+                            <a href="#" name="anchor" class="pd-footer-link">Industrial Engineering</a>
+                            <a href="#" name="anchor" class="pd-footer-link">Manufacturing</a>
+                            <a href="#" name="anchor" class="pd-footer-link">Pharmaceutical</a>
+                            <a href="#" name="anchor" class="pd-footer-link">Public Sector</a>
+                            <a href="#" name="anchor" class="pd-footer-link">Transport</a>
+                            <a href="#" name="anchor" class="pd-footer-link">Information Technology</a>
+                        </div>                         
+                    </div>
+                </div>
+                <div class="pb-4 row">
+                    <div class="col-12">
+                        <div class="pd-divider"></div>                         
+                    </div>
+                </div>
+                <div class="pd-accred-row row">
+                    <div class="col-lg-4 pb-4 text-center text-lg-start">
+                        <h3>Accredited</h3>
+                        <div class="align-items-center align-items-lg-start d-flex flex-column justify-content-start pt-2">
+                            <a href="#" name="anchor" class="d-inline-block mb-3"><img src="images/design-assets/nhs.webp" alt="nhs logo" width="120" loading="lazy" height="48" class="pd-accred-logo"></a>
+                            <a href="#" name="anchor" class="d-inline-block mb-3"><img alt="iso logo" width="120" loading="lazy" src="images/design-assets/iso-27001.webp" class="pd-accred-logo" height="50"></a>
+                        </div>                         
+                    </div>
+                    <div class="col-lg-4 pb-4 text-center text-lg-start">
+                        <h3>Trusted</h3>
+                        <div class="pt-2">
+                            <a href="#" class="align-items-center align-items-lg-start d-flex flex-column justify-content-center justify-content-md-start pb-2 pd-review-card"><img src="images/design-assets/icon-google.svg" alt="Google Icon White" width="74" height="24" loading="lazy"><div class="align-items-center d-flex flex-row justify-content-center justify-content-md-start pb-1 pd-rating pt-1"><span class="me-2">5.0 / 5.0</span>
+                                    <div class="">
+                                        <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
+                                        <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
+                                        <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
+                                        <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
+                                        <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
+                                    </div>
+                                </div></a>
+                            <a href="#" class="align-items-center align-items-lg-start d-flex flex-column justify-content-center justify-content-md-start pd-review-card"><img alt="Clutch Icon White" width="74" loading="lazy" src="images/design-assets/icon-clutch.svg" height="22"><div class="align-items-center d-flex flex-row justify-content-center justify-content-md-start pb-1 pd-rating pt-1"><span class="me-2">5.0 / 5.0</span>
+                                    <div class="">
+                                        <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
+                                        <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
+                                        <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
+                                        <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
+                                        <img src="images/design-assets/icon-star.svg" alt="icon review star" width="14" height="14" loading="lazy" class="">
+                                    </div>
+                                </div></a>
+                        </div>                         
+                    </div>
+                    <div class="col-lg-4 pb-4 text-center text-lg-start">
+                        <h3>Social</h3>
+                        <div class="pt-2">
+                            <a href="#" name="anchor" class="d-inline-block pd-social-logo"><img src="images/design-assets/icon-facebook.svg" alt="facebook icon" width="40" height="40" loading="lazy"></a>
+                            <a href="#" name="anchor" class="d-inline-block pd-social-logo"><img alt="LinkedIn icon" width="40" height="40" loading="lazy" src="images/design-assets/icon-linkedin.svg"></a>
+                            <a href="#" name="anchor" class="d-inline-block pd-social-logo"><img alt="facebook icon" width="40" height="40" loading="lazy" src="images/design-assets/icon-instagram.svg"></a>
+                        </div>                         
+                    </div>
+                </div>
+                <div class="pb-4 row">
+                    <div class="col-12">
+                        <div class="pd-divider"></div>                         
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 pb-4 pb-md-0 text-center text-lg-start">
+                        <p>2025&copy; Fort Marketing. All Rights Reserved.</p>                          
+                    </div>
+                    <div class="col-lg-6 text-center text-lg-end">
+                        <a href="#" class="pd-footer-link">Privacy Policy</a>                          
+                    </div>
+                </div>
+            </div>
+        </footer>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-footer-4</p>
